Updates to support current version of ROCm and SNACK
Note: There are some required changes to CLOC to get this to work
Signed-off-by: Jason Lowe-Power <jason@lowepower.com>

--- a/caches/Makefile
+++ b/caches/Makefile
@@ -2,10 +2,10 @@
 
 
 test: kernel.o main.cpp kernel.h
-	g++ -o test kernel.o main.cpp -L/opt/hsa/lib -lhsa-runtime64 -lelf
+	g++ -o test kernel.o main.cpp -L/opt/rocm/lib -lhsa-runtime64
 
 kernel.o kernel.h: kernel.cl
-	cloc -q -c kernel.cl
+	../../CLOC/bin/snack.sh -c -amdllvm /opt/rocm/hcc-1.0/compiler -mcpu carrizo -libgcn /opt/rocm/lib kernel.cl 
 
 clean:
 	rm -f kernel.o test kernel.h
